--- a/rpg-resume.html
+++ b/rpg-resume.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Jon's Resume Village</title>
+<title>Jon's Ghibli Resume Village</title>
 
 <script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.min.js"></script>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -13,36 +13,36 @@ body{
     margin:0;
     overflow:hidden;
     font-family:'Inter',sans-serif;
-    background:linear-gradient(to top,#dbeafe,#f0f9ff);
+    background:linear-gradient(to top,#fef6e4,#fde2e4);
 }
 
-/* Floating aesthetic info card */
+/* Floating soft info panel */
 #infoCard{
     position:absolute;
-    bottom:30px;
+    bottom:40px;
     left:50%;
     transform:translateX(-50%);
-    width:420px;
+    width:450px;
     background:rgba(255,255,255,.85);
-    backdrop-filter:blur(20px);
-    border-radius:20px;
-    padding:25px;
-    box-shadow:0 20px 60px rgba(0,0,0,.15);
+    backdrop-filter:blur(15px);
+    border-radius:25px;
+    padding:28px;
+    box-shadow:0 25px 70px rgba(0,0,0,.15);
     display:none;
     text-align:center;
-    transition:.3s;
+    transition:.4s ease;
 }
 
 #infoCard h2{
     margin:0 0 8px 0;
     font-weight:700;
-    color:#1e293b;
+    color:#5f6f52;
 }
 
 #infoCard p{
-    font-size:14px;
-    color:#475569;
-    line-height:1.6;
+    font-size:15px;
+    color:#6c757d;
+    line-height:1.7;
 }
 </style>
 </head>
@@ -55,18 +55,21 @@ body{
 
 <script>
 
+const WORLD_WIDTH = 2000;
+const WORLD_HEIGHT = 1000;
+
 const resumeData = [
-    {x:200,y:400,title:"Primary Education",text:"Jose G. Peralta Memorial School<br>Valedictorian (2011-2017)"},
-    {x:400,y:250,title:"Junior High",text:"Fellowship Baptist College<br>With Honor (2017-2021)"},
-    {x:650,y:350,title:"Senior High",text:"STEM Strand<br>With High Honor (2021-2023)"},
-    {x:850,y:450,title:"College",text:"B.S. Electronics Engineering<br>PUP - Present"},
-    {x:600,y:150,title:"Work Experience",text:"Bandai Wireharness (2025)<br>NOCECO (2023)"}
+    {x:400,y:700,title:"Primary Education",text:"Jose G. Peralta Memorial School<br>Valedictorian (2011-2017)"},
+    {x:800,y:500,title:"Junior High",text:"Fellowship Baptist College<br>With Honor (2017-2021)"},
+    {x:1200,y:650,title:"Senior High (STEM)",text:"With High Honor (2021-2023)"},
+    {x:1500,y:450,title:"College",text:"B.S. Electronics Engineering<br>PUP - Present"},
+    {x:1000,y:300,title:"Work Experience",text:"Bandai Wireharness (2025)<br>NOCECO (2023)"}
 ];
 
 const config={
     type:Phaser.AUTO,
-    width:1100,
-    height:600,
+    width:window.innerWidth,
+    height:window.innerHeight,
     physics:{default:'arcade',arcade:{gravity:{y:0},debug:false}},
     scene:{create,update}
 };
@@ -76,30 +79,50 @@ const game=new Phaser.Game(config);
 let player;
 let cursors,keyW,keyA,keyS,keyD;
 let houses=[];
+let clouds=[];
+let camera;
 let currentHouse=null;
 
 function create(){
 
-    // Sky
-    this.add.rectangle(550,300,1100,600,0xbfdbfe);
+    // Soft sky gradient
+    const sky = this.add.rectangle(WORLD_WIDTH/2,WORLD_HEIGHT/2,WORLD_WIDTH,WORLD_HEIGHT,0xfde2e4);
+
+    this.physics.world.setBounds(0,0,WORLD_WIDTH,WORLD_HEIGHT);
 
     // Grass
-    this.add.rectangle(550,520,1100,200,0x86efac);
+    this.add.rectangle(WORLD_WIDTH/2,850,WORLD_WIDTH,300,0xd8f3dc);
 
-    // Create trees
-    for(let i=0;i<8;i++){
-        createTree(this,Phaser.Math.Between(100,1000),Phaser.Math.Between(350,500));
+    // Random trees
+    for(let i=0;i<25;i++){
+        createTree(this,
+            Phaser.Math.Between(100,WORLD_WIDTH-100),
+            Phaser.Math.Between(400,850)
+        );
     }
 
-    // Create houses
+    // Clouds
+    for(let i=0;i<8;i++){
+        createCloud(this,
+            Phaser.Math.Between(0,WORLD_WIDTH),
+            Phaser.Math.Between(50,250)
+        );
+    }
+
+    // Houses
     resumeData.forEach(data=>{
         createHouse(this,data);
     });
 
-    // Player
-    player=this.add.circle(550,500,14,0x2563eb);
+    // Player (soft circle like Ghibli spirit)
+    player=this.add.circle(600,800,16,0x588157);
     this.physics.add.existing(player);
     player.body.setCollideWorldBounds(true);
+
+    // Camera follow
+    camera=this.cameras.main;
+    camera.startFollow(player,true,0.08,0.08);
+    camera.setBounds(0,0,WORLD_WIDTH,WORLD_HEIGHT);
 
     cursors=this.input.keyboard.createCursorKeys();
     keyW=this.input.keyboard.addKey('W');
@@ -118,28 +141,38 @@ function update(){
     if(cursors.down.isDown||keyS.isDown)vy=1;
 
     const vec=new Phaser.Math.Vector2(vx,vy);
-    if(vec.length()>0)vec.normalize().scale(230);
+    if(vec.length()>0)vec.normalize().scale(260);
 
     player.body.setVelocity(vec.x,vec.y);
 
-    checkHouseProximity();
+    moveClouds();
+
+    checkProximity();
 }
+
+/* ================= GHIBLI OBJECTS ================= */
 
 function createHouse(scene,data){
 
     // Shadow
-    scene.add.ellipse(data.x,data.y+40,100,30,0x000000,0.2);
+    scene.add.ellipse(data.x,data.y+45,120,30,0x000000,0.15);
 
     // Body
-    const body=scene.add.rectangle(data.x,data.y,100,70,0xfef3c7)
-        .setStrokeStyle(3,0xf59e0b);
+    const body=scene.add.rectangle(data.x,data.y,120,80,0xffe8d6)
+        .setStrokeStyle(4,0xddbea9);
 
     // Roof
-    scene.add.triangle(data.x,data.y-45,
-        data.x-60,data.y-10,
-        data.x+60,data.y-10,
-        data.x,data.y-90,
-        0xf87171);
+    scene.add.triangle(
+        data.x,data.y-60,
+        data.x-80,data.y-10,
+        data.x+80,data.y-10,
+        data.x,data.y-130,
+        0xcb997e
+    );
+
+    // Window
+    scene.add.rectangle(data.x-25,data.y,25,25,0xbde0fe);
+    scene.add.rectangle(data.x+25,data.y,25,25,0xbde0fe);
 
     body.info=data;
     houses.push(body);
@@ -147,19 +180,40 @@ function createHouse(scene,data){
 
 function createTree(scene,x,y){
 
-    scene.add.ellipse(x,y+20,40,20,0x000000,0.2);
-    scene.add.rectangle(x,y,15,40,0x92400e);
-    scene.add.circle(x,y-30,35,0x16a34a);
+    scene.add.ellipse(x,y+25,40,20,0x000000,0.1);
+    scene.add.rectangle(x,y,18,50,0x8d5524);
+    scene.add.circle(x,y-40,45,0x95d5b2);
+    scene.add.circle(x-25,y-30,35,0xb7e4c7);
+    scene.add.circle(x+25,y-30,35,0xb7e4c7);
 }
 
-function checkHouseProximity(){
+function createCloud(scene,x,y){
+    let cloud=scene.add.container(x,y);
+
+    let c1=scene.add.circle(0,0,35,0xffffff,0.9);
+    let c2=scene.add.circle(40,10,30,0xffffff,0.9);
+    let c3=scene.add.circle(-40,10,30,0xffffff,0.9);
+
+    cloud.add([c1,c2,c3]);
+    clouds.push(cloud);
+}
+
+function moveClouds(){
+    clouds.forEach(cloud=>{
+        cloud.x+=0.2;
+        if(cloud.x>WORLD_WIDTH+100)cloud.x=-100;
+    });
+}
+
+/* ================= INTERACTION ================= */
+
+function checkProximity(){
 
     let found=false;
 
     houses.forEach(house=>{
         const dist=Phaser.Math.Distance.Between(player.x,player.y,house.x,house.y);
-
-        if(dist<90){
+        if(dist<110){
             showInfo(house.info.title,house.info.text);
             found=true;
         }
